tabshell-core/src/main/resources/com/techsenger/tabshell/core/style/core.css
/*
 * Copyright 2024-2026 Pavel Castornii.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

/*
    Author: Pavel Castornii
*/

.root-stack-pane {
    -fx-background-color: transparent;
}

/*
    Stage
*/
.stage-box {
    -fx-background-color: ladder(-color-bg-default, -color-base-9 49%, -color-base-4 50%), -color-bg-default;
}

.stage-box > .title-bar {
    -fx-background-color: -color-bg-extra;
    -fx-background-insets: 0;
}

.stage-box > .title-bar {
    -fx-background-color: -color-bg-extra;
    -fx-background-insets: 0;
    -fx-padding: 0 12px 0 12px;
}

.stage-box > .title-bar > .icon-view-box {
    -fx-alignment: CENTER_LEFT;
}

.stage-box > .title-bar > .icon-view-box > .image-icon-view { }

.stage-box > .title-bar > .icon-view-box > .font-icon-view {
    -fx-text-fill: -color-fg-default;
}

.stage-box > .title-bar > .menu-bar {
    -fx-background-color: -color-bg-extra;
}

.stage-box > .title-bar > .menu-bar >.container {
    -fx-padding: 0;
}

.stage-box > .title-bar > .button-box > .button > .icon {
    -fx-background-color: -color-fg-default;
}

.stage-box:unfocused > .title-bar {
    -fx-background-color: ladder(-color-bg-default, derive(-color-bg-extra, +4%) 49%, derive(-color-bg-extra, +20%) 50%);
}

.stage-box:unfocused > .title-bar > .menu-bar {
    -fx-background-color: ladder(-color-bg-default, derive(-color-bg-extra, +4%) 49%, derive(-color-bg-extra, +20%) 50%);
}

.stage-box > .content-area {
    -fx-background-color: -color-bg-default;
}

.stage-box .menu-item {
    -fx-background-color: ladder(-color-bg-default, -color-bg-extra 49%, -color-bg-default 50%);
}

.stage-box .context-menu {
    -fx-background-color:  -color-border-muted, ladder(-color-bg-default, -color-bg-extra 49%, -color-bg-default 50%);
}

/*
    Dialog
*/
.dialog-box {
    -fx-background-color: ladder(-color-bg-default, -color-border-muted 49%, -color-base-4 50%), -color-bg-default;
    -fx-background-insets: 0 0 0 0, 1 1 1 1;
    -fx-padding: 1px; /* 1 - line */
}

.dialog-box > .title-bar {
    -fx-min-height: 2.6em;
    -fx-max-height: 2.6em;
    -fx-background-color: -color-bg-extra;
    -fx-background-insets: 0;
    -fx-padding: 0 12px 0 12px;
}

.dialog-box > .title-bar > .icon-view-box {
    -fx-alignment: CENTER_LEFT;
}

.dialog-box > .title-bar > .icon-view-box > .image-icon-view { }

.dialog-box > .title-bar > .icon-view-box > .font-icon-view {
    -fx-text-fill: -color-fg-default;
    -fx-padding: 0 4 0 0;
}

.dialog-box > .title-bar > .title-label {
    -fx-padding: 0 0 0 6px;
}

.dialog-box > .title-bar > .button-box > .close-button {
    -fx-padding: 10px;
}

.dialog-box > .title-bar > .button-box > .close-button > .icon {
    -fx-background-color: -color-button-fg;
    -fx-shape: "M 0,0 H1 L 4,3 7,0 H8 V1 L 5,4 8,7 V8 H7 L 4,5 1,8 H0 V7 L 3,4 0,1 Z";
    -fx-scale-shape: false;
    -fx-scale-x: 1.1;
    -fx-scale-y: 1.1;
    -fx-min-width: 20px;
    -fx-min-height: 20px;
    -fx-padding: 10px;
}

.dialog-box > .title-bar > .button-box > .close-button:hover > .icon {
    -fx-background-color: -color-button-fg-hover;
}

.dialog-box > .title-bar > .button-box > .close-button:pressed > .icon {
    -fx-background-color: -color-button-fg-pressed;
}

.dialog-box:inactive > .title-bar {
    -fx-background-color: ladder(-color-bg-default, derive(-color-bg-extra, +4%) 49%, derive(-color-bg-extra, +20%) 50%);
}

.dialog-box > .wrapper > .main-box > .content-box {
    -fx-background-color: -color-bg-default;
}

.stage-box > .title-bar > .button-box > .button,
.dialog-box > .title-bar > .button-box > .button {
    /* if we change bg color it is necessary to set colors for all pseudo classes and setting insets of the first
    bg color to 0 leaves some pixels around the button. So, we decrease button size and increase insets for the
    second bg color */
    -fx-background-insets: 0, -1; /* default 0, 1 */;
    -fx-min-width: 18px;
    -fx-min-height: 18px;
    -fx-max-width: 18px;
    -fx-max-height: 18px;
    -fx-background-radius: 20;
}

.stage-box > .title-bar > .icon-view-box > .font-icon-view {
    -fx-font-size: 1.6em;
}

.dialog-box > .title-bar > .icon-view-box > .font-icon-view {
    -fx-font-size: 1.6em;
}

